Update  .yaml file
